--- a/data_structure/python_built_in_data_structure_and_operator.ipynb
+++ b/data_structure/python_built_in_data_structure_and_operator.ipynb
@@ -6,7 +6,7 @@
       "name": "python_built_in_data_structure_and_operator.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM8wsHxyJtuYQYzRDOdh+ne",
+      "authorship_tag": "ABX9TyNvXEpqXyB7DEB1rrEaDaw2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,7 +54,7 @@
       "source": [
         "# integer\n",
         "\n",
-        "* `int()` can change other data type to integer"
+        "* `int(value, base)` can change other data type to integer"
       ],
       "metadata": {
         "id": "vPDWbxIy-sKu"
@@ -65,22 +65,26 @@
       "source": [
         "# integer\n",
         "x=3\n",
-        "print(x, type(x)) # use type() function to check the data type of a variable; print \"<class \"int\">\""
+        "print(x, type(x)) # use type() function to check the data type of a variable; print \"<class \"int\">\"\n",
+        "\n",
+        "y=int(\"1010\", 2)\n",
+        "print(y, type(y))"
       ],
       "metadata": {
         "id": "ZqVY9nWflw8F",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "18db22bf-8832-4a3c-a071-7a194b7a2148"
+        "outputId": "78ad2894-7cd5-49d3-9e48-70b3113e785e"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "3 <class 'int'>\n"
+            "3 <class 'int'>\n",
+            "10 <class 'int'>\n"
           ]
         }
       ]
@@ -266,8 +270,8 @@
       "cell_type": "code",
       "source": [
         "# bitwise operator\n",
-        "x=3 # binary value: 11\n",
-        "y=2 # binary value: 10\n",
+        "x=int(\"0011\", 2) # dec=3\n",
+        "y=int(\"0010\", 2) # dec=2\n",
         "\n",
         "print( ~x )      # bitwise NOT; print \"-4\" binary value: -100\n",
         "print( x & y )    # bitwise AND; print \"2\" binary value: 10\n",
@@ -285,9 +289,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4ucMsRuTQ3pP",
-        "outputId": "02e7be22-0a4e-4dd5-9d36-69126b12bfce"
+        "outputId": "61f6ce26-6297-4c33-9ab6-5e50236d0558"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -467,10 +471,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "sz-6dmoeAgPb",
-        "outputId": "8e75d3da-a1c9-4e94-edb8-6bc9af7e0541",
+        "outputId": "62d1d76e-d337-4525-9c46-3513d58b9015",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -485,7 +489,10 @@
             "HELLO\n",
             "True\n",
             "False\n",
-            "world hi\n"
+            "world hi\n",
+            "['a', 'b', 'c']\n",
+            "a-b-c\n",
+            "number is: 123\n"
           ]
         }
       ],
@@ -493,12 +500,14 @@
         "# methods for string\n",
         "# in python, string is an object, and so it has many methods for us to use (a method in python is called a member function in C++)\n",
         "str1=\"hello\"\n",
-        "print( str1.count(\"l\") )     # Count number of \"l\"; print \"2\"\n",
-        "print( str1.capitalize() )    # Capitalize a string; print \"Hello\"\n",
-        "print( str1.upper() )       # Convert a string to uppercase; print \"HELLO\"\n",
+        "print( str1.count(\"l\") )     # count number of letter \"l\"; print \"2\"\n",
+        "print( str1.capitalize() )    # capitalize a string; print \"Hello\"\n",
+        "print( str1.upper() )       # convert a string to uppercase; print \"HELLO\"\n",
         "print( str1.isalpha() )      # check whether all the characters in s are English alphabets\n",
-        "print( \"A_X\".isalpha() )    # print \"False\"\n",
-        "print( \"  world hi  \".strip() ) # Strip leading and trailing whitespace; print \"world\"\n",
+        "print( \"A_X\".isalpha() )      # print \"False\"\n",
+        "print( \"  world hi  \".strip() ) # strip leading and trailing whitespace; print \"world\"\n",
+        "print( \"a-b-c\".split(\"-\") )       # split \"a-b-c\"; return list ['a', 'b', 'c']\n",
+        "print( \"-\".join([\"a\", \"b\", \"c\"]) )  # join list ['a', 'b', 'c']; print \"a-b-c\"\n",
         "\n",
         "# all mutable action will lead to Error as string is immutable\n",
         "#str1.append(\"a\")\n",
@@ -539,10 +548,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "pmDR8h3aAgPi",
-        "outputId": "431e39bc-be62-4e9a-a820-3c851ccf9b17",
+        "outputId": "6b634723-cb1d-4620-d6c8-76bad6675962",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -553,6 +562,7 @@
           "name": "stdout",
           "text": [
             "number is 100\n",
+            "number is 100\n",
             "number is 100\n"
           ]
         }
@@ -562,7 +572,8 @@
         "# in print(), it may not be too convenient to use \"+\" all the time to concatenate several non-string pieces. Alternatively, we can use f-string as below:\n",
         "number=100\n",
         "print( \"number is \"+str(number) )\n",
-        "print( f\"number is {number}\" )  # anything enclosed by {} is considered a variable name"
+        "print( f\"number is {number}\" )   # anything enclosed by {} is considered a variable name\n",
+        "print( \"number is {}\".format(number) )"
       ]
     },
     {
