--- a/data_structure/python_built_in_data_structure_and_operator.ipynb
+++ b/data_structure/python_built_in_data_structure_and_operator.ipynb
@@ -6,7 +6,7 @@
       "name": "python_built_in_data_structure_and_operator.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNvXEpqXyB7DEB1rrEaDaw2",
+      "authorship_tag": "ABX9TyO/66xDBnmSdGINBj5gbtVz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,26 +65,22 @@
       "source": [
         "# integer\n",
         "x=3\n",
-        "print(x, type(x)) # use type() function to check the data type of a variable; print \"<class \"int\">\"\n",
-        "\n",
-        "y=int(\"1010\", 2)\n",
-        "print(y, type(y))"
+        "print(x, type(x)) # use type() function to check the data type of a variable; print \"<class \"int\">\""
       ],
       "metadata": {
         "id": "ZqVY9nWflw8F",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "78ad2894-7cd5-49d3-9e48-70b3113e785e"
+        "outputId": "41de0efc-4479-4767-c3e4-abb8e2f2f0c6"
       },
-      "execution_count": 11,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "3 <class 'int'>\n",
-            "10 <class 'int'>\n"
+            "3 <class 'int'>\n"
           ]
         }
       ]
@@ -270,8 +266,8 @@
       "cell_type": "code",
       "source": [
         "# bitwise operator\n",
-        "x=int(\"0011\", 2) # dec=3\n",
-        "y=int(\"0010\", 2) # dec=2\n",
+        "x=int(\"0b0011\", 2) # dec=3\n",
+        "y=int(\"0b0010\", 2) # dec=2\n",
         "\n",
         "print( ~x )      # bitwise NOT; print \"-4\" binary value: -100\n",
         "print( x & y )    # bitwise AND; print \"2\" binary value: 10\n",
@@ -289,9 +285,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4ucMsRuTQ3pP",
-        "outputId": "61f6ce26-6297-4c33-9ab6-5e50236d0558"
+        "outputId": "98ba2ba7-72fb-46fc-89da-a8784747450b"
       },
-      "execution_count": 9,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -471,7 +467,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "sz-6dmoeAgPb",
         "outputId": "62d1d76e-d337-4525-9c46-3513d58b9015",
@@ -548,7 +544,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "pmDR8h3aAgPi",
         "outputId": "6b634723-cb1d-4620-d6c8-76bad6675962",
@@ -574,6 +570,55 @@
         "print( \"number is \"+str(number) )\n",
         "print( f\"number is {number}\" )   # anything enclosed by {} is considered a variable name\n",
         "print( \"number is {}\".format(number) )"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# byte string (b-string)\n",
+        "byte_str=b\"\\x48\\x65\\x6c\\x6c\\x6f\\x20\\x57\\x6f\\x72\\x6c\\x64\"\n",
+        "print(byte_str)\n",
+        "print(byte_str.decode(\"ASCII\")) # convert the bytes to string with ASCII encoding\n",
+        "\n",
+        "\n",
+        "#dec\n",
+        "x=97\n",
+        "print(x, type(x)) # use type() function to check the data type of a variable; print \"<class \"int\">\"\n",
+        "\n",
+        "#hex (\\x00 ,0x00)\n",
+        "y=hex(x)\n",
+        "print(y, type(y), int(y, 16))\n",
+        "\n",
+        "#bin (\\b00 ,0b00)\n",
+        "y=bin(x)\n",
+        "print(y, type(y), int(y, 2))\n",
+        "\n",
+        "\n",
+        "print( chr(97) )\n",
+        "print( ord(\"a\") )"
+      ],
+      "metadata": {
+        "id": "--10D9bV_hDV",
+        "outputId": "384d2798-3cc9-43cd-a597-65337a0c702c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "b'Hello World'\n",
+            "Hello World\n",
+            "97 <class 'int'>\n",
+            "0x61 <class 'str'> 97\n",
+            "0b1100001 <class 'str'> 97\n",
+            "a\n",
+            "97\n"
+          ]
+        }
       ]
     },
     {
@@ -610,6 +655,9 @@
         "\n",
         "print(list3*2)      # print \"[3, 1, 'foo', 4, 5, 3, 1, 'foo', 4, 5]\"\n",
         "\n",
+        "list4=[i*2 for i in [5,3,45,36]]\n",
+        "print(list4)\n",
+        "\n",
         "del list1        # delete list1"
       ],
       "metadata": {
@@ -617,9 +665,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9hh3GKzF7wvN",
-        "outputId": "9fe7bd8c-e50c-4a38-cdf0-e22bbc3b6403"
+        "outputId": "f119c799-1ec1-4e89-e6cf-19ead22e3bfd"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -631,7 +679,8 @@
             "2\n",
             "[3, 1, 'foo']\n",
             "[3, 1, 'foo', 4, 5]\n",
-            "[3, 1, 'foo', 4, 5, 3, 1, 'foo', 4, 5]\n"
+            "[3, 1, 'foo', 4, 5, 3, 1, 'foo', 4, 5]\n",
+            "[10, 6, 90, 72]\n"
           ]
         }
       ]
