--- a/basic_concept/intro_python.ipynb
+++ b/basic_concept/intro_python.ipynb
@@ -280,6 +280,41 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "a=[47,56,32]\n",
+        "b=[25,53,85]\n",
+        "\n",
+        "for i, j in zip(a,b):\n",
+        "  print(i, j)\n",
+        "\n",
+        "for i, j in enumerate(a):\n",
+        "  print(i, j)"
+      ],
+      "metadata": {
+        "id": "A_rsB6HX1YEX",
+        "outputId": "daaccc8c-f29b-467d-c589-275d5af057b9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "47 25\n",
+            "56 53\n",
+            "32 85\n",
+            "0 47\n",
+            "1 56\n",
+            "2 32\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "colab": {
